--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,6 +8,7 @@ services:
       - ./nginx/default.conf:/etc/nginx/conf.d/default.conf
   node-app:
     build: .
+    image: tawatchaiyuth/node-app
     # ports: 
     #   - "3000-3001:3000"
     environment:
